// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render readonly text field 1`] = `
<div>
  <span
    class="readonlyTextField"
    data-testid="readonly-text-field"
  >
    readOnly text
  </span>
</div>
`;

exports[`render readonly text field with an icon 1`] = `
<div>
  <span
    class="readonlyTextField"
    data-testid="readonly-text-field"
  >
    <span
      aria-hidden="true"
      class="material-icons MuiIcon-root icon"
      data-testid="icon"
    >
      star
    </span>
    Starred
  </span>
</div>
`;

exports[`render readonly text field with empty children 1`] = `
<div>
  <span
    class="readonlyTextField"
    data-testid="readonly-text-field"
  >
    
  </span>
</div>
`;

exports[`render readonly text field with empty children shown as - 1`] = `
<div>
  <span
    class="readonlyTextField"
    data-testid="readonly-text-field"
  >
    -
  </span>
</div>
`;
